resources/ingress/app2/manifest.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  labels: # these are replicaset labels
    name: app2
    tier: frontend
spec:
  # modify replicas according to your case
  replicas: 1
  selector:
    # these are used to select the pod to create replicas
    matchLabels:
      name: app2
      tier: frontend
  # this is pod definition
  template:
    metadata:
      # these labels belongs to pod
      labels:
        name: app2
        tier: frontend
    spec:
      containers:
      - name: app2
        image: muneer509/app2:v1
---
kind: Service
apiVersion: v1
metadata:
  name: app2
spec:
  selector:
    name: app2
    tier: frontend
  ports:
  - name: nginx-svc-port
    protocol: TCP
    port: 80 # service port
    targetPort: 80 # container port
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: app2
    annotations:
      #kubernetes.io/ingress.class: alb
      alb.ingress.kubernetes.io/scheme: internet-facing
      alb.ingress.kubernetes.io/target-type: ip
      alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:177107204587:certificate/7d86ba4d-ea77-41bb-9d29-70e32cc5a922
      alb.ingress.kubernetes.io/listen-ports: '[ {"HTTPS": 443}]'
      alb.ingress.kubernetes.io/tags: Environment=dev,Team=test
      alb.ingress.kubernetes.io/group.name: expense
spec:
    ingressClassName: alb
    rules:
    - host: "app2.mxyz.shop"
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: app2
              port:
                number: 80
